--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -30,12 +30,12 @@
 
   <div class="form-group">
     <%= f.label :expected_value %>
-    <%= f.text_field :expected_value, class: 'form-control' %>
+    <%= f.number_field :expected_value, class: 'form-control' %>
   </div>
-  
+
  <div class="form-group">
       <%= f.label :users %>
-      <%= f.collection_select :user_ids, User.all, :id, :email, {},  {:multiple => true, :class=>'select2 form-control'} %> 
+      <%= f.collection_select :user_ids, User.all, :id, :email, {},  {:multiple => true, :class=>'select2 form-control'} %>
  <div>
   <div class="actions">
     <%= f.submit 'Save', class: 'btn btn-success' %>
