--- a/app/views/sprints/_form.html.erb
+++ b/app/views/sprints/_form.html.erb
@@ -28,6 +28,11 @@
     {:class => "select2 "} %>
   </div>
 
+  <div class="form-group">
+    <%= f.label :value %>
+    <%= f.number_field :value, class: 'form-control' %>
+  </div>
+
   <div class="fomr-group">
     <%= f.label :project_id %>
   <!--  <%= f.collection_select :project_id , Project.all, :id, :name, {},  {:class=>'select2'} %> -->
